--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,9 +2,9 @@ name: Build and Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ master ]
+    branches: [master]
   schedule:   
     - cron: '0 12 * * *'
 
@@ -13,31 +13,26 @@ jobs:
     name: Run E2E Tests
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v5.0.0
-    - name: Use Node.js 21
-      uses: actions/setup-node@v6.0.0
-      with:
-        node-version: 22
-        cache: 'npm'      
-    - run: npm install 
-    - run: npx playwright install      
-    - run: npm run actions  
-      env:
-        ZEROSTEP_TOKEN: ${{ secrets.ZEROSTEP_TOKEN }}       
-
-  sonarcloud:
-    name: Run SonarCloud
-    runs-on: ubuntu-latest
-    steps:
       - uses: actions/checkout@v5.0.0
-        with:
-          fetch-depth: 0  
-      - name: Setup Node.js environment
+      - name: Use Node.js 21
         uses: actions/setup-node@v6.0.0
         with:
-          node-version: 22 
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarqube-scan-action@v6.0.0    
+          node-version: 22
+          cache: 'npm'      
+      - run: npm install
+      - run: npx playwright install
+      - run: npm run actions
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ZEROSTEP_TOKEN: ${{ secrets.ZEROSTEP_TOKEN }}
+
+  sonarqube:
+    name: SonarQube
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v6
+        env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
