--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,14 @@
-sonar.projectKey=ugioni_playwright-e2e
-sonar.organization=ugioni
-sonar.projectName=Playwright E2E
-sonar.projectVersion=1.0
-sonar.sources=./src
-sonar.sourceEncoding=UTF-8
+sonar.projectKey=HenriqueSilva29_prova03-playwright-henrique
+sonar.organization=henriquesilva29
+
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=prova03-playwright-henrique
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
