--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    name: Run E2E Tests
+    name: Run E2E Testse
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5.0.0
